namespace WebApplication1.Services.AI;

public interface IAiRecommendationServiceFactory
{
    IAiRecommendationService Create();
}

